2011-04-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/gis_maps/render_view.php: Fixed bad sql query sintax.

2011-03-31 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php, operation/agentes/stat_win.php: changes for
	to show with new engine.
	 
	* include/graphs/functions_pchart.php,
	include/graphs/pChart/pData.class.php,
	include/graphs/pChart/pDraw.class.php,
	include/graphs/functions_fsgraph.php,
	include/graphs/fgraph.php: part of job is Sergio Martin in my laptop, the
	changes to show borders in the static image graph.

2011-03-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/config_process.php: Fixed wrong condition when global 
	configuration for "flash_charts" option is override by user value.

2011-03-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/db/oracle.php: Added new functions for Oracle support.
	include/functions_db.php: Added conditional code for Oracle engine.
	* pandoradb.oracle.sql: Added new db procedure "insert_id" to 
	retrieve PK when insert is performed.

2011-03-31  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/pChart/pDraw.class.php: Added to 
	library an option to avoid draw zeros in area 
	charts

2011-03-31  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/pChart/pDraw.class.php: Fixed 
	pchart library bug with default value for
	forcetransparency attribute. Changed from NULL
	to -1

2011-03-31 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php, include/graphs/functions_fsgraph.php: add
	to support and wip with new graph engine.

2011-03-31  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Improved 
	legend control and added limitation in showing
	xaxis data to one each 10 pixels

2011-03-30  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Fixed bad 
	legend show condition

2011-03-30 Javier Lanz <javier.lanz@artica.es>